testdata/asm/invalid/basic_07.zkasm
;;error:3:12-16:unknown register or constant
fn f(arg u256) -> (res u256) {
   res = g(arg1)
   return
}

fn g(arg u256) -> (res u256) {
   res = 0
   return
}
